# swagger_stuff/swagger_server/controllers/metrics_controller.py
@@ -1,7 +1,7 @@
 import connexion
 import six
 
-from swagger_server.models.metric import Metric  # noqa: E501
+from swagger_server.models.inline_response200 import InlineResponse200  # noqa: E501
 from swagger_server import util
 
 
@@ -11,6 +11,6 @@ def get_metrics():  # noqa: E501
      # noqa: E501
 
 
-    :rtype: List[Metric]
+    :rtype: InlineResponse200
     """
     return 'do some magic!'
