# swagger_stuff/swagger_server/models/__init__.py
@@ -4,6 +4,10 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.host import Host
+from swagger_server.models.inline_response200 import InlineResponse200
+from swagger_server.models.inline_response2001 import InlineResponse2001
+from swagger_server.models.inline_response2001_metricid import InlineResponse2001METRICID
+from swagger_server.models.inline_response2002 import InlineResponse2002
 from swagger_server.models.measurement import Measurement
 from swagger_server.models.metadata import Metadata
 from swagger_server.models.metric import Metric
