# swagger_stuff/swagger_server/models/inline_response200.py
@@ -1,0 +1,65 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.metric import Metric  # noqa: F401,E501
+from swagger_server import util
+
+
+class InlineResponse200(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, metric_id: Metric=None):  # noqa: E501
+        """InlineResponse200 - a model defined in Swagger
+
+        :param metric_id: The metric_id of this InlineResponse200.  # noqa: E501
+        :type metric_id: Metric
+        """
+        self.swagger_types = {
+            'metric_id': Metric
+        }
+
+        self.attribute_map = {
+            'metric_id': '[METRIC_ID]'
+        }
+
+        self._metric_id = metric_id
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'InlineResponse200':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The inline_response_200 of this InlineResponse200.  # noqa: E501
+        :rtype: InlineResponse200
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def metric_id(self) -> Metric:
+        """Gets the metric_id of this InlineResponse200.
+
+
+        :return: The metric_id of this InlineResponse200.
+        :rtype: Metric
+        """
+        return self._metric_id
+
+    @metric_id.setter
+    def metric_id(self, metric_id: Metric):
+        """Sets the metric_id of this InlineResponse200.
+
+
+        :param metric_id: The metric_id of this InlineResponse200.
+        :type metric_id: Metric
+        """
+
+        self._metric_id = metric_id
