# swagger_stuff/swagger_server/models/inline_response2001_metricid.py
@@ -1,0 +1,65 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.measurement import Measurement  # noqa: F401,E501
+from swagger_server import util
+
+
+class InlineResponse2001METRICID(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, hostname: Measurement=None):  # noqa: E501
+        """InlineResponse2001METRICID - a model defined in Swagger
+
+        :param hostname: The hostname of this InlineResponse2001METRICID.  # noqa: E501
+        :type hostname: Measurement
+        """
+        self.swagger_types = {
+            'hostname': Measurement
+        }
+
+        self.attribute_map = {
+            'hostname': '[HOSTNAME]'
+        }
+
+        self._hostname = hostname
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'InlineResponse2001METRICID':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The inline_response_200_1_METRIC_ID of this InlineResponse2001METRICID.  # noqa: E501
+        :rtype: InlineResponse2001METRICID
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def hostname(self) -> Measurement:
+        """Gets the hostname of this InlineResponse2001METRICID.
+
+
+        :return: The hostname of this InlineResponse2001METRICID.
+        :rtype: Measurement
+        """
+        return self._hostname
+
+    @hostname.setter
+    def hostname(self, hostname: Measurement):
+        """Sets the hostname of this InlineResponse2001METRICID.
+
+
+        :param hostname: The hostname of this InlineResponse2001METRICID.
+        :type hostname: Measurement
+        """
+
+        self._hostname = hostname
