# swagger_stuff/swagger_server/models/inline_response2002.py
@@ -1,0 +1,65 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.host import Host  # noqa: F401,E501
+from swagger_server import util
+
+
+class InlineResponse2002(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, hostname: Host=None):  # noqa: E501
+        """InlineResponse2002 - a model defined in Swagger
+
+        :param hostname: The hostname of this InlineResponse2002.  # noqa: E501
+        :type hostname: Host
+        """
+        self.swagger_types = {
+            'hostname': Host
+        }
+
+        self.attribute_map = {
+            'hostname': '[HOSTNAME]'
+        }
+
+        self._hostname = hostname
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'InlineResponse2002':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The inline_response_200_2 of this InlineResponse2002.  # noqa: E501
+        :rtype: InlineResponse2002
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def hostname(self) -> Host:
+        """Gets the hostname of this InlineResponse2002.
+
+
+        :return: The hostname of this InlineResponse2002.
+        :rtype: Host
+        """
+        return self._hostname
+
+    @hostname.setter
+    def hostname(self, hostname: Host):
+        """Sets the hostname of this InlineResponse2002.
+
+
+        :param hostname: The hostname of this InlineResponse2002.
+        :type hostname: Host
+        """
+
+        self._hostname = hostname
